# basedbot

./: .gitignore  Cargo.toml  LICENSE  README.md  playground.ipynb  playground.py
big_robot/: Cargo.toml  build.rs
big_robot/proto/: actuator.proto  common.proto  imu.proto  process_manager.proto
big_robot/src/: lib.rs
bot/: Cargo.toml
bot/src/: big.rs  humanoid.rs  k_bot.rs  main.rs  mini_robot.rs  movement.rs
humanoid/: Cargo.toml
humanoid/src/: lib.rs  runtime.rs
kbot/: Cargo.toml
kbot/proto/kos/: inference.proto  system.proto
kbot/src/: grpc_interface.rs  lib.rs
pose_mappings/: clipped_data.json  depth.py  download_pose_models.sh  env.yaml  flapping_motion.json  flapping_motion_2.json  flapping_motion_3.json  inverse_kinematics.py  mappings.py  pose_data.json
sdk/: Cargo.toml  build.rs
sdk/src/: lib.rs
sdk/tests/: integration.rs
zeroth/: Cargo.toml
zeroth/proto/: hal_pb.proto
zeroth/tests/: integration.rs
