[package]
name = "big_robot"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "big_robot"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-rust2 = "0.9"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
async-trait = "0.1"
rumqttc = "0.24"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
hyper = "0.14"
tracing = "0.1"
lazy_static = "1.4"
krec = "0.2"

[build-dependencies]
tonic-build = "0.12"
tonic.workspace = true

