[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
zeroth = { path = "../zeroth" }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
bon = "3.3.0"
eyre = "0.6.12"
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
crossbeam = "0.8.4"
