[package]
name = "bot"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
path = "src/main.rs"
name = "main"

[[bin]]
path = "src/big.rs"
name = "big"

[dependencies]
zeroth = { path = "../zeroth" }
humanoid = { path = "../humanoid" }
kbot = { path = "../kbot" }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
bon = "3.3.0"
eyre = "0.6.12"
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
crossbeam = "0.8.4"
axum = "0.7.9"
