[package]
name = "zeroth"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = 'zeroth-build'
path = "build.rs"

[lib]
name = "zeroth"
path = "src/lib.rs"

[dependencies]
prost = "0.13.4"
tonic.workspace = true
tonic-build = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
prost = "0.13.4"
tonic.workspace = true

