[package]
name = "zeroth"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = 'zeroth-build'
path = "build.rs"

[lib]
name = "zeroth"
path = "src/lib.rs"

[dependencies]
prost = "0.13.4"
tonic.workspace = true
snafu = "0.8.5"
tonic-build = "0.12.3"
num_enum = "0.7.3"
serde = { version = "1.0.216", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.3"
prost = "0.13.4"
tonic.workspace = true
